Page Component を追加

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.2.0/tailwind.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kosugi+Maru&display=swap">
   </head>
-  <body>
+  <body class="bg-yellow-500">
     <noscript>このアプリケーションにはJavaScriptが必要です。</noscript>
     <div id="root"></div>
   </body>
